--- a/test-output/old/SupplierSuite/SupplierTestone.properties
+++ b/test-output/old/SupplierSuite/SupplierTestone.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=SupplierTestone]
+[SuiteResult context=SupplierTestone][SuiteResult context=SupplierTesttwo][SuiteResult context=SupplierTestthree]
